[package]
name = "furnel"
version = "0.1.2"
authors = ["Kristian Thy <thy@42.dk>"]
edition = "2021"
rust-version = "1.56.1"
description = "A command-line utility to compress files using the brotli algorithm"
readme = "README.md"
repository = "https://github.com/pyxy-dk/furnel"
license = "MIT"
keywords = [
    "br",
    "brotli",
    "compression",
    "web",
    "webpack",
]
categories = [
    "command-line-utilities",
    "compression",
    "development-tools::build-utils",
    "encoding",
    "filesystem",
]

[dependencies]
brotli = "7.0"
clap = { version = "4.5", features = ["derive"] }
glob = "0.3"

[package.metadata.deb]
features = []
section = "utils"
assets = [
  ["target/release/furnel", "usr/bin/", "755"],
  ["CHANGELOG.md", "usr/share/doc/furnel/NEWS", "644"],
  ["README.md", "usr/share/doc/furnel/README", "644"],
#  ["doc/furnel.1", "usr/share/man/man1/furnel.1", "644"],
]
extended-description = """\
furnel is a command-line utility to compress files using the brotli algorithm.
"""
